# eclypse

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .ruff.toml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: Containerfile  devcontainer.json  post-create.sh
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: build_and_deploy.yaml  upload_coverage.yaml
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/_static/css/: custom.css  home.css  landing.css  landing.css.map
docs/_static/scss/: landing.scss
docs/_templates/: index.html
docs/source/api/: index.rst
docs/source/overview/: index.rst  install.rst
eclypse/: __init__.py
eclypse/builders/: __init__.py  _helpers.py  infrastructure.py
eclypse/builders/application/: __init__.py  _helpers.py
eclypse/builders/infrastructure/: __init__.py  _helpers.py  generators.py  orion_cev.py
eclypse/builders/workflow/: __init__.py  _helpers.py  base_method.py  workflow.py  workflow_family.py
eclypse/graph/: __init__.py  application.py  asset_graph.py  infrastructure.py
eclypse/graph/assets/: __init__.py  additive.py  asset.py  bucket.py  concave.py  convex.py  defaults.py  multiplicative.py  space.py  symbolic.py
eclypse/gui/: __init__.py  components.py  layout.py  reporter.py  utils.py
eclypse/gui/callbacks/: __init__.py  buttons.py  info_box.py  network.py  plots.py
eclypse/io/: __init__.py  _helpers.py  assets.py  base.py  context.py  functions.py  graphs.py  registry.py
eclypse/io/defaults/: __init__.py  docker_compose.py  gml.py  graphml.py  json.py  networkx.py  node_link.py  tosca.py
eclypse/io/plugins/: base.py
eclypse/placement/: __init__.py  _manager.py  placement.py  strategy.py  view.py
eclypse/placement/strategies/: __init__.py  best_fit.py  first_fit.py  random.py  round_robin.py  static.py  strategy.py
eclypse/policies/: __init__.py  _filters.py  _helpers.py
eclypse/policies/compose/: __init__.py  all_of.py  chain.py  conditional.py  one_of.py  weighted_choice.py
eclypse/policies/constraints/: __init__.py  _helpers.py  clamp_values.py  ensure_capacity_floor.py  normalise.py  round_int.py
eclypse/policies/degradation/: __init__.py  degrade.py  increase_latency.py  reduce_capacity.py
eclypse/policies/degrade/: __init__.py  _helpers.py  clamp_values.py  decay.py  degrade.py  increase.py  ramp_to.py  reduce.py  restore.py  scale.py  set_value.py
eclypse/policies/distribution/: __init__.py  _helpers.py  bernoulli.py  beta.py  categorical.py  constant.py  discrete.py  empirical.py  exponential.py  gamma.py  lognormal.py  normal.py  pareto.py  poisson.py  triangular.py  truncated_normal.py  uniform.py  weibull.py
eclypse/policies/failure/: __init__.py  _helpers.py  availability_flap.py  brownout.py  correlated_failure.py  edge_availability_flap.py  kill_edges.py  kill_nodes.py  latency_spike.py  network_partition.py  resource_exhaustion.py  revive_edges.py  revive_nodes.py
eclypse/policies/noise/: __init__.py  _helpers.py  additive_jitter.py  bounded_random_walk.py  correlated_noise.py  dropout.py  gaussian_jitter.py  impulse.py  jitter_bandwidth.py  jitter_latency.py  jitter_resources.py  momentum_walk.py  multiplicative_jitter.py  seasonal_noise.py
eclypse/policies/replay/: __init__.py  _helpers.py  from_csv.py  from_dataframe.py  from_parquet.py  from_records.py  interpolated_replay.py  replay_edges.py  replay_events.py  replay_graph.py  replay_nodes.py  replay_with_mapping.py
eclypse/policies/schedule/: __init__.py  after.py  at.py  between.py  cooldown.py  every.py  jittered_every.py  once_at.py  repeat.py  until.py  with_probability.py
eclypse/policies/topology/: __init__.py  add_edge.py  add_node.py  churn.py  remove_node.py  rewire.py
eclypse/policies/trace_driven/: __init__.py  _helpers.py  from_dataframe.py  from_parquet.py  from_records.py  replay_edges.py  replay_nodes.py
eclypse/policies/workload/: __init__.py  _helpers.py  arrival_process.py  diurnal_load.py  (+1 more)
eclypse/remote/: __init__.py  bootstrap.py  service.py  simulator.py
eclypse/report/: __init__.py  backend.py  query.py  report.py  reporter.py  schema.py
eclypse/simulation/: __init__.py  config.py  runtime.py  simulation.py
eclypse/utils/: __init__.py  _logging.py  constants.py  defaults.py  tools.py  types.py
eclypse/workflow/: __init__.py  callback.py  event.py
examples/: README.md
examples/echo/: application.py  echo.py  infrastructure.py  main.py  notebook.ipynb  update_policy.py
examples/edgewise/: assets.py  main.py  metrics.py  milp_engine.py  policy.py  requirements.txt  search_space.py  strategy.py  utils.py
examples/grid-analysis/: analyse.ipynb  infrastructure.py  main.py  metrics.py  requirements.txt  strategy.py
examples/grid_analysis/: analyse.ipynb  clean.ipynb  infrastructure.py  main.py  metrics.py  requirements.txt  strategy.py
examples/image-prediction/: analysis.ipynb  application.py  metrics.py  requirements.txt  update_policy.py
examples/image_prediction/: __init__.py  analyse.ipynb  application.py  main.py  metrics.py  requirements.txt  update_policy.py
examples/io_round_trip/: __init__.py  cases.py  grid.py  main.py
examples/off_the_shelf/: __init__.py  application.py  events.py  infrastructure.py  main.py
examples/sock_shop/: __init__.py  mpi.py  rest.py  update_policy.py
examples/user-distribution/: analyse.ipynb  infrastructure.py  main.py  metric.py  requirements.txt
examples/user_distribution/: __init__.py  analyse.ipynb  dataset.parquet  infrastructure.py  main.py  metric.py  requirements.txt  update_policy.py
tests/: __init__.py  conftest.py
tests/extras/: test_config_and_optional_imports.py  test_ray_and_reporter_extras.py
tests/fixtures/: __init__.py  backends.py  domain.py  reporting.py
tests/integration/: test_emulation_runtime.py  test_simulation_runtime.py
tests/optional/: test_config_and_optional_imports.py  test_ray_and_reporter_optional.py
tests/unit/: test_pyproject_scripts.py
(+544 files in other folders)
