[project]
name = "eclypse"
version = "0.9.0"
description = "an Edge-CLoud pYthon Platform for Simulated runtime Environments"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license-files = ["LICENSE"]

authors = [
    { name = "Jacopo Massa", email = "jacopo.massa@di.unipi.it" },
    { name = "Valerio De Caro", email = "valerio.decaro@di.unipi.it" },
]

maintainers = [
    { name = "Jacopo Massa", email = "jacopo.massa@di.unipi.it" },
    { name = "Valerio De Caro", email = "valerio.decaro@di.unipi.it" },
]

dependencies = [
    "networkx (>=3.6.1,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
]

[project.urls]
Homepage = "https://github.com/eclypse-org/eclypse"
Repository = "https://github.com/eclypse-org/eclypse"


# Dependency Groups
[dependency-groups]
dev = [
    "commitizen (>=4.13.10,<5.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "mypy (>=1.20.2,<2.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "ruff (>=0.15.11,<0.16.0)",
]

deploy = [
    "wheel (>=0.47.0,<0.48.0)",
    "setuptools (>=82.0.1,<83.0.0)",
    "twine (>=6.2.0,<7.0.0)",
]

test = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pytest-xdist (>=3.8.0,<4.0.0)",
    "tensorboardx (>=2.6.5,<3.0.0)",
    "polars (>=1.40.1,<2.0.0)",
    "topohub (>=1.5.1,<2.0.0)",
    "ray[default] (>=2.55.1,<3.0.0)",
]

docs = [
    "myst-parser (>=5.0.0,<6.0.0)",
    "sphinx-copybutton (>=0.5.2,<0.6.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "docformatter[tomli] (>=1.7.7,<2.0.0)",
    "sphinx-autobuild (>=2025.8.25,<2026.0.0)",
    "sphinx-favicon (>=1.1.0,<2.0.0)",
    "sphinx-design (>=0.7.0,<0.8.0)",
    "sphinx-icon (>=0.2.2,<0.3.0)",
    "pydata-sphinx-theme (>=0.17.1,<0.18.0)",
    "sphinx (>=9.1.0,<10.0.0) ; python_version >= '3.12'",
    "sphinx (>=9.0.4,<9.1.0) ; python_version < '3.12'",
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.deploy]
optional = true

[tool.poetry.group.test]
optional = true

[tool.poetry.group.docs]
optional = true


# Build backend
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
echo = "examples.echo.main:main"
grid-analysis = "examples.grid_analysis.main:main"
image-prediction = "examples.image_prediction.main:main"
off-the-shelf = "examples.off_the_shelf.main:main"
sock-shop-mpi = "examples.sock_shop.mpi:main"
sock-shop-rest = "examples.sock_shop.rest:main"
user-distribution = "examples.user_distribution.main:main"


# -------------------------
# Third-party tool settings
# -------------------------

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.9.0"
tag_format = "$version"
version_files = [
    "pyproject.toml:^version",
    "eclypse/__init__.py:__version__",
    "CITATION.cff:version",
]


[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 2
filter_files = true
skip = ["__init__.py"]

[tool.mypy]
python_version = "3.11"

[[tool.mypy.overrides]]
module = [
    "ray",
    "ray.*",
    "polars",
    "polars.*",
    "tensorboardX",
    "networkx",
    "networkx.*",
    "pandas",
    "pandas.*",
    "numpy",
    "numpy.*",
    "loguru",
    "loguru.*",
]
ignore_missing_imports = true

# --------------------------
# Pytest and Coverage settings
# --------------------------

#

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=eclypse --cov-report=xml --cov-report=term-missing -n auto"
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning", "ignore::FutureWarning"]
markers = [
    "integration: end-to-end integration tests",
    "emulation: ray-backed remote integration tests",
    "optional: tests that exercise optional dependencies",
]

[tool.coverage.run]
branch = true
source = ["eclypse"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_also = [
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "raise NotImplementedError",
]
